fix(plugins/plugin-client-common): Grids in minisplits have horizontal overflow
Fixes #6781

--- a/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/MiniSplit.scss
@@ -107,7 +107,7 @@ $block-padding: 0.25em;
         .kui--data-table-as-grid {
           position: absolute;
           padding-right: 1em;
-          width: calc(100% - 1em);
+          width: calc(100% - 2em);
           max-height: calc(100% - 2em);
           overflow: auto;
         }
